# SoundSwitch

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml.example  tray-icons.rc
src/: audio_device.rs  config.rs  hotkey_manager.rs  main.rs
