[package]
name = "sound_switch"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8" # For TOML configuration file parsing
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
windows = { version = "0.56", features = [
    "Win32_Media_Audio",        # Core Audio APIs (IMMDeviceEnumerator, etc.)
    "Win32_System_Com",         # COM initialization (CoInitializeEx, etc.)
    "Win32_Foundation",         # Basic Windows types (HANDLE, BOOL, etc.)
    "Win32_UI_WindowsAndMessaging", # Needed for message loops potentially used by tray/hotkeys
]} # Windows API bindings
global_hotkey = "0.4" # Global hotkey registration
fuzzy-matcher = "0.3" # Fuzzy string matching
tray-item = "0.8" # System tray icon
